Revise welcome email content and contact details
Updated the email content and footer information.

--- a/welcome-email.html
+++ b/welcome-email.html
@@ -53,10 +53,11 @@
         <p>I was looking for your business online and noticed there isn’t a website listed yet. Many local businesses lose potential customers simply because people can’t find basic information like hours, services, or phone numbers.</p>
         <p>I specialize in building simple, clean websites for local businesses — usually live in under a week.</p>
         <p>Would it make sense to show you what something like that could look like for your business?</p>
-        <a class="button" href="mailto:youremail@yourdomain.com">Reply to Learn More</a>
+        <a class="button" href="mailto:fortunefavors3@gmail.com">Reply to Learn More</a>
         <div class="footer">
-            &copy; 2025 Your Company Name. All rights reserved.
+            &copy; 2025 Web Design by Robert. All rights reserved.
         </div>
     </div>
 </body>
 </html>
+
