Revise welcome email for personalization and style
Updated the welcome email template to personalize the greeting and business reference.

--- a/welcome-email.html
+++ b/welcome-email.html
@@ -3,11 +3,11 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Website Offer</title>
+<title>Your Business Website Offer</title>
 <style>
     body {
         font-family: Arial, sans-serif;
-        background-color: #f9f9f9;
+        background-color: #f4f4f4;
         margin: 0;
         padding: 0;
     }
@@ -17,24 +17,27 @@
         background-color: #ffffff;
         padding: 30px;
         border-radius: 8px;
-        box-shadow: 0 0 10px rgba(0,0,0,0.05);
+        box-shadow: 0 0 15px rgba(0,0,0,0.05);
     }
     h1 {
         color: #333333;
         font-size: 24px;
+        margin-bottom: 15px;
     }
     p {
         color: #555555;
-        line-height: 1.5;
+        font-size: 16px;
+        line-height: 1.6;
+        margin-bottom: 15px;
     }
     a.button {
         display: inline-block;
         padding: 12px 20px;
-        margin-top: 20px;
         background-color: #007BFF;
         color: #ffffff;
         text-decoration: none;
         border-radius: 5px;
+        font-weight: bold;
     }
     a.button:hover {
         background-color: #0056b3;
@@ -49,15 +52,15 @@
 </head>
 <body>
     <div class="container">
-        <h1>Hello [FIRSTNAME],</h1>
-        <p>I was looking for your business online and noticed there isn’t a website listed yet. Many local businesses lose potential customers simply because people can’t find basic information like hours, services, or phone numbers.</p>
-        <p>I specialize in building simple, clean websites for local businesses — usually live in under a week.</p>
-        <p>Would it make sense to show you what something like that could look like for your business?</p>
-        <a class="button" href="mailto:fortunefavors3@gmail.com">Reply to Learn More</a>
+        <h1>Hi [FIRSTNAME],</h1>
+        <p>I was looking for <strong>[BUSINESS]</strong> online and noticed there isn’t a website listed yet.</p>
+        <p>Many local businesses lose potential customers simply because people can’t find basic information like hours, services, or phone numbers.</p>
+        <p>I specialize in building **simple, clean websites** for local businesses — usually live in under a week.</p>
+        <p>Would it make sense to show you what something like that could look like for <strong>[BUSINESS]</strong>?</p>
+        <a class="button" href="mailto:youremail@yourdomain.com">Reply to Learn More</a>
         <div class="footer">
             &copy; 2025 Web Design by Robert. All rights reserved.
         </div>
     </div>
 </body>
 </html>
-
